<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/main_btn_1"
            android:key="generateIPSetting">
        <com.lionzxy.firstandroidapp.app.brain.IntEditTextPreference
                android:key="timeout"
                android:title="@string/timeout"
                android:summary="@string/timeoutDiscr"
                android:numeric="integer"
                android:maxLength="10"
        />
        <com.lionzxy.firstandroidapp.app.brain.IntEditTextPreference
                android:key="maxThread"
                android:title="@string/maxThread"
                android:summary="@string/maxThreadDiscr"
                android:numeric="integer"
                android:maxLength="2"
        />
    </PreferenceCategory>
    <CheckBoxPreference android:title="Application Updates"
                        android:defaultValue="false"
                        android:summary="This option if selected will allow the application to check for latest versions."
                        android:key="applicationUpdates"/>

</PreferenceScreen>